--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,12 +1,12 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
-  --vt-c-white: #ffffff;
-  --vt-c-white-soft: #f8f8f8;
-  --vt-c-white-mute: #f2f2f2;
+  --vt-c-white: #F9C600;
+  --vt-c-white-soft: #F1A745;
+  --vt-c-white-mute: #FFA745;
 
-  --vt-c-black: #181818;
-  --vt-c-black-soft: #222222;
-  --vt-c-black-mute: #282828;
+  /*--vt-c-black: #181818;*/
+  /*--vt-c-black-soft: #222222;*/
+  /*--vt-c-black-mute: #282828;*/
 
   --vt-c-indigo: #2c3e50;
 
@@ -36,18 +36,23 @@
   --section-gap: 160px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --color-background: var(--vt-c-black);
-    --color-background-soft: var(--vt-c-black-soft);
-    --color-background-mute: var(--vt-c-black-mute);
+/*@media (prefers-color-scheme: dark) {*/
+/*  :root {*/
+/*    --color-background: var(--vt-c-black);*/
+/*    --color-background-soft: var(--vt-c-black-soft);*/
+/*    --color-background-mute: var(--vt-c-black-mute);*/
 
-    --color-border: var(--vt-c-divider-dark-2);
-    --color-border-hover: var(--vt-c-divider-dark-1);
+/*    --color-border: var(--vt-c-divider-dark-2);*/
+/*    --color-border-hover: var(--vt-c-divider-dark-1);*/
 
-    --color-heading: var(--vt-c-text-dark-1);
-    --color-text: var(--vt-c-text-dark-2);
-  }
+/*    --color-heading: var(--vt-c-text-dark-1);*/
+/*    --color-text: var(--vt-c-text-dark-2);*/
+/*  }*/
+/*}*/
+
+@font-face {
+  font-family: "smm2";
+  src:url("./fonts/super-mario-maker-2/super-mario-maker-2.otf") format("opentype");
 }
 
 *,
@@ -67,6 +72,7 @@ body {
     background-color 0.5s;
   line-height: 1.6;
   font-family:
+    smm2,
     Inter,
     -apple-system,
     BlinkMacSystemFont,
