--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,3 +1,5 @@
+@import "./fonts/fonts.css";
+
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
   --vt-c-white: #F9C600;
@@ -50,11 +52,6 @@
 /*  }*/
 /*}*/
 
-@font-face {
-  font-family: "smm2";
-  src:url("./fonts/super-mario-maker-2/super-mario-maker-2.otf") format("opentype");
-}
-
 *,
 *::before,
 *::after {
@@ -73,18 +70,11 @@ body {
   line-height: 1.6;
   font-family:
     smm2,
+    GabiaGosran-Regular,
+    NanumSquareNeo,
     Inter,
     -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    "Fira Sans",
-    "Droid Sans",
-    "Helvetica Neue",
-    sans-serif;
+    serif;
   font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
